# ChronosInventory

./: .gitignore  CHANGELOG.md  README.md  README_RELEASE.md  build_backend.ps1  estoque_backend.spec
.github/workflows/: ci.yml  release.yml
app/: __init__.py
app/models/: __init__.py  product.py  stock_movement.py  validators.py
app/services/: __init__.py  backup_diagnostics_service.py  backup_scheduler_service.py  backup_service.py  compare_snapshot_service.py  export_service.py  image_service.py  import_service.py  inventory_adjustment_service.py  inventory_service.py  inventory_session_service.py  inventory_types.py  local_share_service.py  migration_service.py  movement_analytics_service.py  movement_rules_service.py  movement_service.py  official_base_config_store.py  official_base_publication_helper.py  official_base_service.py  official_base_status_service.py  report_api_service.py  report_service.py  stock_compare_config_store.py  stock_compare_service.py  stock_dataframe_service.py  stock_profile_service.py  stock_service.py  update_service.py
backend/: __init__.py  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
config/: __init__.py  settings.py
core/: __init__.py  constants.py  exceptions.py
docs/: API_DOCS.md  PROJECT_MAP.md
frontend/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/src/: main.rs
scripts/: check_release_artifacts.py  check_versions.py  release_doctor.py
(+122 files in other folders)
