[package]
name = "chronos_inventory_desktop"
version = "1.2.1"
description = "Chronos Inventory"
authors = ["Você"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "process-relaunch", "shell-sidecar", "updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["time"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
